SUBDIRS = external/libselinux/ \
	external/zlib/src \
	external/pcre/dist2 \
	external/sgs4ext4fs/ \
	system/core/libsparse \
	system/core/libcutils \
	system/core/liblog \
	system/core/libmincrypt/ \
	system/core/cpio/ \
	system/extras/ext4_utils/ \
	system/core/mkbootimg \
        external/bzip2 \
        bootable/recovery/applypatch \
	system/extras/ext4extract/

